modules Terraform/ec2/_main.tf
provider "aws" {
  region  = "${var.aws-region}"
 
}

resource "aws_instance" "instance" {
  ami                         = "${var.instance-ami}"
  instance_type               = "${var.instance-type}"
 
  tags = {
    Name = "${var.instance-tag-name}"
  }
}

resource "aws_security_group" "sg" {
  name   = "${var.sg-tag-name}"

  ingress {
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "22"
    to_port     = "22"
  }

  ingress {
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "80"
    to_port     = "80"
  }

  ingress {
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "443"
    to_port     = "443"
  }

  ingress {
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "8080"
    to_port     = "8080"
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = "0"
    to_port     = "0"
  }

  tags = {
    Name = "${var.sg-tag-name}"
  }
}
